refactor: remove unused pageable method and use Specification for filtering in Cargo service